--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <div id="home" class="row no-gutters backgroundimg">
         <div class="col text-center">
             <img class="photo mt-5" src="img/Me.jpg">
-            <div class="intro mt-5 pt-5">
+            <div class="intro mt-4 pt-4">
                 <p>Hello,</p>
                 <p>I am Tanvir</p>
                 <p>Welcome to my page</p>
@@ -248,18 +248,18 @@
     <footer id="connect">
       <div class="contact-me">
         <p>If you have Any project in your mind.</p>
-        <a class="contactbtn" href="message.html">
+        <!--<a class="contactbtn" href="message.html">
             <span></span>
             <span></span>
             <span></span>
             <span></span>
             Send Me a Message!
-        </a>
+        </a>-->
       </div>
 
       <div class="social">
         <a href="https://www.facebook.com/egoncastle.fb"><i class="fab fa-facebook"></i></a>
-        <a href="#"><i class="fab fa-twitter"></i></a>
+        <a href="https://twitter.com/egoncastle"><i class="fab fa-twitter"></i></a>
         <a href="https://www.instagram.com/egoncastle/"><i class="fab fa-instagram"></i></a>
         <a href="https://www.youtube.com/channel/UCaDRgniRfIIuKwZ2QyFMHgw"><i class="fab fa-youtube"></i></a>
       </div>
@@ -271,7 +271,7 @@
     <!--attched social bar-->
     <div class="a-social-b">
       <a href="https://www.facebook.com/egoncastle.fb"><i class="fab fa-facebook"></i></a>
-      <a href="#"><i class="fab fa-twitter"></i></a>
+      <a href="https://twitter.com/egoncastle"><i class="fab fa-twitter"></i></a>
       <a href="https://www.instagram.com/egoncastle/"><i class="fab fa-instagram"></i></a>
       <a href="https://www.youtube.com/channel/UCaDRgniRfIIuKwZ2QyFMHgw"><i class="fab fa-youtube"></i></a>
     </div>
