--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 </h2>
                 <p>My name is Tanvir Ahmed Khan. I am a SOPHOMORE at CSE department of Independent University of Bangladesh.</p>
                 <p>I have been doing 3d modelling for over 2 years now. I can create all kinds of models from achritectural to animated visuals. I have a youtube page named Egon Castle where I share my artwork.</p>
-                <p>I use blender most of the time for creating models. Below are some of my previous renders.</p>
+                <p>I use blender most of the time for creating models. Below are some of my previous renders. The name of my youtube channel is EGON CASTLE. Be sure to like and subscribe.</p>
                 <br>
             </div>
             <div class="col-lg-6 my-5">
