--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
         <div class="col text-center">
             <img class="photo mt-5" src="img/Me.jpg">
             <div class="intro mt-4 pt-4">
-                <p>Hello,</p>
+                <!--<p>Hello,</p>
                 <p>I am Tanvir</p>
-                <p>Welcome to my page</p>
+                <p>Welcome to my page</p>-->
             </div>
         </div>
     </div>
